[package]
name = "docker"
description = "Docker Remote API in Rust"
version = "0.0.41"
authors = ["Graham Lee <ghmlee@ghmlee.com>"]
license = "Apache-2.0"
homepage = "https://github.com/ghmlee/rust-docker"
repository = "https://github.com/ghmlee/rust-docker.git"
documentation = "https://ghmlee.github.io/rust-docker/doc/docker"
readme = "README.md"
keywords = ["docker"]

[dependencies]
hyper = { version="^0.9", default-features=false }
openssl = { version="^0.7", optional=true }
unix_socket = { version="^0.5", optional=true }
rustc-serialize = "0.3.19"

[features]
default = ["unix"]
ssl = ["openssl", "hyper/ssl"]
unix = ["unix_socket"]
